syntax = "proto3";

package api;

option go_package = "/pebble_wallets";


service PebbleAPI {
       rpc SendTransaction (TransactionRequest) returns (TransactionReply) {}
       
       rpc SubscribeBlocks (SubscribeRequest) returns (stream Block) {}
  }
  
  message TransactionRequest {
    bytes from = 1;
    bytes to = 2;
    bytes id = 3;
    bytes signature = 4;
    bytes data = 5; 
  }

  message SubscribeRequest{

  }

  message Block {
    int64 blockId = 1;
  }
  
  message TransactionReply {
    int32 status = 1;
    string errorDescription = 2;
    uint64 recievedTime = 3;
  }
